--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <div id="centro" align="center">
-<table id="Table_01" width="600" height="2484" border="0" cellpadding="0" cellspacing="0">
+<table id="Table_01" width="600" height="2557" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="https://i.imgur.com/ZT5jC7W.png" width="600" style="display: block" height="1560" border="0" alt=""></td>
+			<img src="https://i.imgur.com/fb56pAn.png" width="600" style="display: block" height="1560" border="0" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://www.youtube.com/watch?v=ZzgseLPg1Vc">
-				<img src="https://i.imgur.com/CqdDIkv.png" width="600" style="display: block" height="371" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/bmc9L3S.png" width="600" style="display: block" height="458" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="https://i.imgur.com/h6KiCyx.png" width="600" style="display: block" height="302" border="0" alt=""></td>
+			<img src="https://i.imgur.com/3oyYOFl.png" width="600" style="display: block" height="302" border="0" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://conteudo.beeon.com.br/case-sanmariana-lp">
-				<img src="https://i.imgur.com/YNJwcLP.png" width="600" style="display: block" height="61" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/iwYVNL5.png" width="600" style="display: block" height="58" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="https://i.imgur.com/gcgscdU.png" width="600" style="display: block" height="190" border="0" alt=""></td>
+			<img src="https://i.imgur.com/9mSp8Ea.png" width="600" style="display: block" height="179" border="0" alt=""></td>
 	</tr>
 </table>
 </div>
